@@ -1,5 +1,7 @@
 Version 2.02.11 - 
 =====================================
+  Extend _for_each_pv() to allow termination without error.
+  Abstract _is_contiguous().
   Remove duplicated pv arg from _check_contiguous().
   Accept regionsize with lvconvert.
   Add report columns with underscore before field names ending 'size'.
